upd animated hand for woman in feature page, fix bug in animation on ios in direction rtl after click on nav buttons

--- a/src/components/features/component/allFeatures/all.less
+++ b/src/components/features/component/allFeatures/all.less
@@ -171,7 +171,7 @@
 	animation: discover_rtl 0.6s ease-out;
 }
 .discover_woman_rtl {
-	z-index: 2;
+	z-index: 3;
 	top: 2.8rem;
 	transform: scale(-1, 1);
 	left: 2rem;
