--- a/src/components/pricing/pricing.less
+++ b/src/components/pricing/pricing.less
@@ -3,6 +3,7 @@
 .pricing {
 	padding: 3.5rem 0 3.75rem;
 	min-height: 100vh;
+	overflow-x: hidden;
 	width: 100%;
 	scroll-snap-align: start;
 }
